Fix bug display sports on small screens

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -25,6 +25,9 @@
                 text-align: center;
             }
         }
+        @media (max-width: 600px){
+            min-height: 200px;
+        }
 	}
 	.links_sports {
 		display: inline-block;
